<resources>
    <string name="app_name" translatable="false">Football Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Football Assistant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_competitions">Competitions</string>
    <string name="menu_items">Sports bag</string>
    <string name="menu_matches">Matches</string>
    <string name="fab_description">Add</string>
    <string name="fab_competition_description">Add competitions</string>
    <string name="fab_item_description">Add item</string>
    <string name="fab_match_description">Add match</string>
    <string name="add_competition">Add competition</string>
    <string name="add_competition_name_hint">Competition name</string>
    <string name="add_competition_team_hint">Team</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add item</string>
    <string name="add_item_name_hint">Name</string>
    <string name="add_match">Add match</string>
    <string name="add_match_rival_team_hint">Rival team</string>
    <string name="add_match_date_hint">Date</string>
    <string name="menu_competition_details">Competition details</string>
    <string name="item_delete_dialog_question">Do you want to delete item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="competition_delete_dialog_question">Do you want to delete competition?</string>
    <string name="match_delete_dialog_question">Do you want to delete match?</string>
    <string name="menu_match_details">Match details</string>
    <string name="date_picker_title">Select date</string>
    <string name="time_picker_title">Select time</string>
    <string name="add_match_home_label">Is home game?</string>
    <string name="delete_error">Delete failed</string>
    <string name="insert_error">Add failed</string>
    <string name="before_match">Before match</string>
    <string name="after_match">After match</string>
    <string name="home_score">Home team score:</string>
    <string name="away_score">Away team score:</string>
    <string name="grade">Grade:</string>
    <string name="note_hint">Additional notes</string>
    <string name="score_hint">0</string>
    <string name="grade_hint">3</string>
</resources>
