<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/ic_menu_matches"
            android:title="@string/menu_matches" />
        <item
            android:id="@+id/nav_competitions"
            android:icon="@drawable/ic_menu_competitions"
            android:title="@string/menu_competitions" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_menu_items"
            android:title="@string/menu_items" />
    </group>
</menu>