<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.soczuks.footballassistant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_matches"
        android:name="com.soczuks.footballassistant.ui.matches.MatchesFragment"
        android:label="@string/menu_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/nav_competitions"
        android:name="com.soczuks.footballassistant.ui.competitions.CompetitionsFragment"
        android:label="@string/menu_competitions"
        tools:layout="@layout/fragment_competitions" />

    <fragment
        android:id="@+id/nav_items"
        android:name="com.soczuks.footballassistant.ui.items.ItemsFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_items" />

</navigation>