<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FootballAssistant.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.FootballAssistant.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fabConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_competition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_competition_description"
            android:visibility="gone"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/fab_item"
            app:layout_constraintEnd_toEndOf="@id/fabConstraintLayout"
            app:layout_constraintStart_toStartOf="@id/fabConstraintLayout"
            app:srcCompat="@drawable/ic_menu_competitions" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_item_description"
            android:visibility="gone"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/fab_match"
            app:layout_constraintEnd_toEndOf="@id/fabConstraintLayout"
            app:layout_constraintStart_toStartOf="@id/fabConstraintLayout"
            app:srcCompat="@drawable/ic_menu_items" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_match_description"
            android:visibility="gone"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/fab"
            app:layout_constraintEnd_toEndOf="@id/fabConstraintLayout"
            app:layout_constraintStart_toStartOf="@id/fabConstraintLayout"
            app:srcCompat="@drawable/ic_menu_matches" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_description"
            app:layout_constraintBottom_toBottomOf="@id/fabConstraintLayout"
            app:layout_constraintEnd_toEndOf="@id/fabConstraintLayout"
            app:layout_constraintStart_toStartOf="@id/fabConstraintLayout"
            app:srcCompat="@android:drawable/ic_input_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>